# bq-twod

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  notes.md
src/: CMakeLists.txt
src/bqmath/: CMakeLists.txt  config.hpp
src/bqutil/: CMakeLists.txt  array.hpp  bqmath.cpp  bqmath.hpp  config.hpp  cyclicbuff.hpp  math.cpp  mempool.hpp  vector.hpp
src/twod/: CMakeLists.txt  chipmunk.cpp  chipmunk.hpp  config.hpp  rect.cpp  rect.hpp  vector.hpp
src/twod/chipmunkpp/: arbiter.cpp  arbiter.hpp  bb.cpp  bb.hpp  body.cpp  body.hpp  circleshape.cpp  circleshape.hpp  memory.hpp  polyshape.cpp  polyshape.hpp  segmentqueryinfo.hpp  segmentshape.cpp  segmentshape.hpp  shape.cpp  shape.hpp  space.cpp  space.hpp  types.cpp  types.hpp  vect.cpp  vect.hpp
src/twod/geom/: mesh.cpp  mesh.hpp  turtle.cpp  turtle.hpp
src/twod/physics/: physics.cpp  physics.hpp
src/twod/types/: rect.hpp  vector.hpp
src/twod_test/: CMakeLists.txt  main.cpp
src/twod_test/demo/: demo.cpp  physics.cpp  physics.hpp
src/twod_test/imgui/: imconfig.h
test/: CMakeLists.txt
test/bqutil_test/: CMakeLists.txt  buff.cpp  math.cpp  vector.cpp
test/twod_test/: CMakeLists.txt  main.cpp
test/twod_test/demo/: _t.hpp  demo.cpp  demo.hpp  geom.cpp  geom.hpp  intersect.cpp  intersect.hpp  physics.cpp  physics.hpp  turtle.cpp  turtle.hpp
test/twod_test/imgui/: imgui-SFML.cpp
